--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,7 +1,6 @@
 .header {
-    padding: 60px;
+    padding: 40px;
     text-align: center;
-    background: #1abc9c;
-    color: white;
     font-size: 30px;
+    font: bold
 }
